# Gemeni-Langchain

./: .dockerignore  .env  Dockerfile  README.md  main.py  main1.py  main2.py  pyproject.toml
controller/: audioProcess.py  imageProcess.py  videoProcess.py  ytTranscript.py
extracode/: image.py  main3.py
utils/: types.py  ytVideoid.py
